--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header {
 
 /* intestazione */
 
-#container1 {
+#Jumbotron {
     /* regole debug */
     background-color: yellow;
     height: 300px;
