--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-#container{
     width: 80%;
     margin: 10px auto;
 }
+
+
 
 /* header */
 
@@ -32,7 +31,7 @@ header {
 
 /* corpo */
 
-#container2 {
+#container {
     /* regole debug */
     background-color: blue;
     height: 500px;
@@ -40,7 +39,7 @@ header {
 }
 
 /* corpo, posizionamento */
-#container2::after {
+#container::after {
     content: "";
     display: table;
     clear: both;
